data/derived/comb/progs/unify/prog2696.ml.out
Characters 29-41:
  let fixpoint (f,b) = wwhile ((f b, false),b);;
                               ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
